# pdfget

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DOI_TO_PMCID_API_ANALYSIS.md  OPTIMIZATION_ANALYSIS.md  README.md  pyproject.toml  pytest.ini  test_pmcids.csv
.github/workflows/: ci.yml  publish.yml
data/: example_dois.csv  example_dois.txt
data/cache/: cache_example.json
data/pdfs/: download_results.json  search_results_1765097089.json  search_results_1765097095.json  search_results_1765097099.json  search_results_1765097230.json  search_results_1765097236.json  search_results_1765097241.json  search_results_1765097294.json  search_results_1765097505.json  search_results_1765097514.json  search_results_1765097746.json  (+11 more)
docs/: CHANGELOG.md  GO_REFACTOR_PLAN.md  LICENSE.md  SCHEMA.md  USER_GUIDE.md
src/: __init__.py
tests/: conftest.py  test_abstract_simple.py  test_abstract_supplementor.py  test_abstract_supplementor_real.py  test_api.py  test_arxiv_downloader.py  test_arxiv_identifiers.py  test_arxiv_search.py  test_basic_functionality.py  test_cache_manager.py  test_config.py  test_counter.py  test_csv_and_identifiers.py  test_doi_converter.py  test_doi_integration.py  test_downloader.py  test_error.py  test_error_handling.py  test_fetcher.py  test_fetcher_basic.py  test_identifier_download.py  test_integration.py  test_integration_api.py  test_main_arxiv.py  test_manager.py  test_ncbi_base.py  test_paper_schema.py  test_pmcid_csv.py  test_pmcid_module.py  test_retry_mechanism.py  test_searcher.py  test_unified_input.py  test_utils.py
(+27 files in other folders)
